Added new features

--- a/src/main/resources/templates/_shared/head.html
+++ b/src/main/resources/templates/_shared/head.html
@@ -6,6 +6,6 @@
         <title>My exam project</title>
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/bootstrap.min.css">
-
+        <link rel="stylesheet" href="/css/style.css">
     </head>
 </th:block>
