--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,3 +1,4 @@
 <th:block th:fragment>
-    <h2>Welcome Please log in to view content</h2>
+    <h2>Welcome</h2>
+    <p>Please log in to view content</p>
 </th:block>
