--- a/src/main/resources/templates/_shared/header.html
+++ b/src/main/resources/templates/_shared/header.html
@@ -14,7 +14,7 @@
                     <a class="nav-link" href="#">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a th:href="@{/about}" class="nav-link" >About</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
