--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<th:block th:fragment>
+    <h2>Emkosoft exam project</h2>
+    <h3>Hope I can finish on time <i class="fas fa-smile-wink"></i>
+    </h3>
+</th:block>
