--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,4 +1,6 @@
 <th:block th:fragment>
+    <h2>Login</h2>
+    <br/>
     <form th:action="@{/login}" th:method="post">
         <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
