--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,21 +4,28 @@
     <form th:action="@{/register}" th:method="post">
         <div class="form-group">
             <label for="username">User name</label>
-            <input type="text" class="form-control" id="username" placeholder="User name">
+            <input type="text" class="form-control" name="username" id="username" placeholder="User name">
         </div>
         <div class="form-group">
             <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+            <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp"
+                   placeholder="Enter email">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Password">
+            <input type="password" class="form-control" name="password" id="password" placeholder="Password">
         </div>
         <div class="form-group">
-            <label for="repeat-password">Password</label>
-            <input type="password" class="form-control" id="repeat-password" placeholder="Password">
+            <label for="repeat-password">Repeat password</label>
+            <input type="password" class="form-control" name="repeatPassword" id="repeat-password"
+                   placeholder="Repeat password">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+    <th:block th:if="${session.message!=null}">
+    <div class="alert alert-danger message" role="alert">
+    [[${session.message}]]
+    </div>
+    </th:block>
 </th:block>
