--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,4 +1,9 @@
 <th:block th:fragment>
+    <th:block th:unless ="${session.user!=null}">
     <h2>Welcome</h2>
     <p>Please log in to view content</p>
+        </th:block>
+    <th:block th:if="${session.user!=null}">
+        <h3>Welcome [[${session.user.username}]]!</h3>
+    </th:block>
 </th:block>
