Added create new post

--- a/src/main/resources/templates/_layouts/index.html
+++ b/src/main/resources/templates/_layouts/index.html
@@ -6,7 +6,7 @@
 <div class="container">
     <th:block th:include="${view}"></th:block>
     <th:block th:if="${message!=null}">
-        <div class="alert alert-danger message" role="alert">
+        <div class="alert alert-danger" role="alert">
             [[${message}]]
         </div>
     </th:block>
