--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,5 +1,4 @@
 <th:block th:fragment>
-    <h2>Emkosoft exam project</h2>
-    <h3>Hope I can finish on time <i class="fas fa-smile-wink"></i>
-    </h3>
+    <h2>Java MVC Frameworks exam project</h2>
+    <h3><i class="fas fa-smile-wink"></i></h3>
 </th:block>
