Ajax post request for edit post

--- a/src/main/resources/templates/_fragments/home-posts-empty.html
+++ b/src/main/resources/templates/_fragments/home-posts-empty.html
@@ -3,6 +3,7 @@
         <div class="col">
             <h4>No posts yet!</h4>
         </div>
+        <div class="col"><i class="far fa-sad-tear"></i></div>
     </div>
     <div class="row">
         <div class="col">
