--- a/src/main/resources/templates/_shared/header.html
+++ b/src/main/resources/templates/_shared/header.html
@@ -1,33 +1,25 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <p class="navbar-brand">Spring Exam</p>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a th:href="@{/}" class="nav-link">  Home</a>
+                    <a th:href="@{/}" class="nav-link"> Home</a>
                 </li>
                 <th:block th:unless="${session.user==null}">
-                    <li class="nav-item">
-                        <a class="nav-link"  th:href="@{/posts/new}">Create new post</a>
-                    </li>
-                    <li class="nav-item">
-                        <a th:href="@{/users/logout}" class="nav-link" >Logout</a>
-                    </li>
+                    <th:block th:include="~{_fragments/nav-user}"/>
                 </th:block>
                 <th:block th:if="${session.user==null}">
-                <li class="nav-item">
-                    <a class="nav-link"  th:href="@{/users/login}">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/users/register}" class="nav-link" >Register</a>
-                </li>
+                    <th:block th:include="~{_fragments/nav-guest}"/>
                 </th:block>
                 <li class="nav-item">
-                    <a th:href="@{/about}" class="nav-link" >About</a>
+                    <a th:href="@{/about}" class="nav-link">About</a>
                 </li>
             </ul>
         </div>
