--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -1,19 +1,26 @@
 <th:block th:fragment>
-    <h2>Create new post</h2>
+    <h2>Edit post</h2>
     <br/>
     <form>
+        <label>
+            <input hidden="hidden" disabled="disabled" id="post-id-edit" type="text" th:value="${post.id}">
+        </label>
+        <label>
+            <input hidden="hidden" disabled="disabled" id="post-creator-edit" type="text" th:value="${post.creatorUsername}">
+        </label>
         <div class="form-group">
-            <label for="post-title">Title</label>
-            <input type="text" class="form-control"  id="post-title-edit" placeholder="Title of post">
+            <label for="post-title-edit">Title</label>
+            <input type="text" class="form-control" th:value="${post.title}"  id="post-title-edit" placeholder="Title of post">
         </div>
         <div class="form-group">
-            <label for="post-url">Attach image for post</label>
-            <input type="text" class="form-control" id="post-url-edit" placeholder="URL for image">
+            <label for="post-url-edit">Attach image for post</label>
+            <input type="text" class="form-control" th:value="${post.pictureUrl}" id="post-url-edit" placeholder="URL for image">
         </div>
         <div class="form-group">
-            <label for="post-description">User name</label>
-            <input type="text" class="form-control"  id="post-description-edit" placeholder="Post description">
+            <label for="post-description-edit">Post description</label>
+            <input type="text" class="form-control" th:value="${post.description}"  id="post-description-edit" placeholder="Post description">
         </div>
-        <button type="button" id="button-edit" class="btn btn-primary">Edit post</button>
+
+        <button type="submit" id="button-edit" class="btn btn-primary">Edit post</button>
     </form>
 </th:block>
