--- a/src/main/resources/templates/messages/all.html
+++ b/src/main/resources/templates/messages/all.html
@@ -1,14 +1,28 @@
 <th:block th:fragment>
 
     <th:block th:if="${!messages.empty}">
-    <th:block th:each="message : ${messages}">
-        <div class="card" style="width: 18rem;">
-                <h5 class="card-title">Message: [[${message.message}]]</h5>
-                <p class="card-text">From [[${message.sendUserUsername}]]</p>
-            </div>
-    </th:block>
+
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Message</th>
+                <th scope="col">User</th>
+            </tr>
+            </thead>
+            <tbody>
+            <th:block th:each="message : ${messages}">
+                <tr>
+                    <th scope="row"><i style="margin-right: 0.5rem;" class="far fa-envelope"></i></th>
+                    <td>[[${message.message}]]</td>
+                    <td>[[${message.sendUserUsername}]]</td>
+                    <td><a th:href="@{/messages/delete(id=${message.id})}" class="btn btn-primary">Delete</a></td>
+                </tr>
+            </th:block>
+            </tbody>
+        </table>
     </th:block>
     <th:block th:unless="${!messages.empty}">
-         <p>You do not have any messages yet!</p>
+        <p>You do not have any messages yet!</p>
     </th:block>
 </th:block>
