--- a/src/main/resources/templates/_fragments/home-posts-empty.html
+++ b/src/main/resources/templates/_fragments/home-posts-empty.html
@@ -2,8 +2,9 @@
     <div class="row">
         <div class="col">
             <h4>No posts yet!</h4>
+
+            <i class="far fa-sad-tear"></i>
         </div>
-        <div class="col"><i class="far fa-sad-tear"></i></div>
     </div>
     <div class="row">
         <div class="col">
