--- a/src/main/resources/templates/comments/all.html
+++ b/src/main/resources/templates/comments/all.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<th:block th:fragment>
 
-</body>
-</html>
+    <th:block th:if="${!allComments.empty}">
+
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Comment</th>
+                <th scope="col">User</th>
+                <th scope="col">Date</th>
+            </tr>
+            </thead>
+            <tbody>
+            <th:block th:each="comment : ${allComments}">
+                <tr>
+                    <th scope="row"><i style="margin-right: 0.5rem;" class="far fa-envelope"></i></th>
+                    <td>[[${comment.comment}]]</td>
+                    <td>[[${comment.userName}}]]</td>
+                 <!--   <td>[[${comment.date}]]</td> -->
+                </tr>
+            </th:block>
+            </tbody>
+        </table>
+    </th:block>
+    <th:block th:unless="${!allComments.empty}">
+        <p>No comments yet!</p>
+    </th:block>
+    <th:block th:include="~{comments/create}"/>
+</th:block>
