--- a/src/main/resources/templates/comments/create.html
+++ b/src/main/resources/templates/comments/create.html
@@ -1,12 +1,11 @@
 <th:block th:fragment>
-    <form th:action="@{/messages/new}" th:object="${createCommentViewModel}" th:method="post">
-        <div class="form-group"  th:classappend="${#fields.hasErrors('message')}? 'has-danger'">
-            <label for="message">Message</label>
+    <form th:action="@{/comments/create}" th:object="${createCommentViewModel}" th:method="post">
+        <div class="form-group"  th:classappend="${#fields.hasErrors('comment')}? 'has-danger'">
+            <label for="comment">Comment</label>
             <input type="text" class="form-control" th:field="*{comment}" id="comment" placeholder="Type comment....">
             <small id="messageHelp"
-                   th:if="${#fields.hasErrors('message')}" th:errors="*{message}">Error</small>
+                   th:if="${#fields.hasErrors('comment')}" th:errors="*{comment}">Error</small>
         </div>
-        <label for="receiver"></label><input type="text"  th:field="*{receiver}" id="receiver" hidden="hidden">
         <button type="submit" class="btn btn-primary">Send</button>
     </form>
 </th:block>
