--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
         <th:block th:unless="${posts.empty}">
             <div class="row">
                 <div class="col">
-                    <h4>All posts</h4>
+                    <h4 class="jumbotron-heading">All posts</h4>
                 </div>
             </div>
             <th:block th:include="~{_fragments/home-posts-all}"/>
