--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,27 +1,33 @@
 <th:block th:fragment>
-    <h2>Register</h2>
-    <br/>
-    <form th:action="@{/users/register}" th:method="post">
-        <div class="form-group">
-            <label for="username-register">User name</label>
-            <input type="text" class="form-control" name="username" id="username-register" placeholder="User name">
+    <div class="container">
+        <div class="py-5 text-center">
+            <h2>Register</h2>
+            <br/>
+            <form th:action="@{/users/register}" th:method="post">
+                <div class="form-group">
+                    <label for="username-register">User name</label>
+                    <input type="text" class="form-control" name="username" id="username-register"
+                           placeholder="User name">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email address</label>
+                    <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp"
+                           placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.
+                    </small>
+                </div>
+                <div class="form-group">
+                    <label for="password-register">Password</label>
+                    <input type="password" class="form-control" name="password" id="password-register"
+                           placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <label for="repeat-password">Repeat password</label>
+                    <input type="password" class="form-control" name="repeatPassword" id="repeat-password"
+                           placeholder="Repeat password">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </div>
-        <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp"
-                   placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
-        <div class="form-group">
-            <label for="password-register">Password</label>
-            <input type="password" class="form-control" name="password" id="password-register" placeholder="Password">
-        </div>
-        <div class="form-group">
-            <label for="repeat-password">Repeat password</label>
-            <input type="password" class="form-control" name="repeatPassword" id="repeat-password"
-                   placeholder="Repeat password">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-
+    </div>
 </th:block>
