--- a/src/main/resources/templates/posts/details.html
+++ b/src/main/resources/templates/posts/details.html
@@ -1,21 +1,25 @@
 <th:block th:fragment>
-    <div class="card" style="width: 18rem;">
-        <th:block th:include="~{_fragments/single-post}"/>
-        <div class="d-flex justify-content-between align-items-center" >
-            <div class="btn-group">
-                <a th:href="@{/comments/all/{id}(id=${post.id})}" class="btn btn-sm btn-outline-success">Comments</a>
+    <div class="container">
+        <div class="py-5 d-flex align-content-center justify-content-center">
+            <div class="card" style="width: 50%">
+                <th:block th:include="~{_fragments/single-post}"/>
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                        <a th:href="@{/comments/all/{id}(id=${post.id})}" class="btn btn-sm btn-outline-success">Comments</a>
+                    </div>
+                </div>
+                <th:block th:if="${session.user.username == post.creatorUsername}">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                            <a th:href="@{/posts/edit(id=${post.id})}" class="btn btn-sm btn-outline-warning">Edit</a>
+                            <a th:href="@{/posts/delete(id=${post.id})}"
+                               class="btn btn-sm btn-outline-danger">Delete</a>
+                        </div>
+                    </div>
+                </th:block>
+
+                <a class="btn btn-primary" th:href="@{/}">Back</a>
             </div>
         </div>
-        <th:block th:if="${session.user.username == post.creatorUsername}">
-            <div class="d-flex justify-content-between align-items-center" >
-                <div class="btn-group">
-                    <a th:href="@{/posts/edit(id=${post.id})}" class="btn btn-sm btn-outline-warning">Edit</a>
-                    <a th:href="@{/posts/delete(id=${post.id})}" class="btn btn-sm btn-outline-danger">Delete</a>
-                </div>
-            </div>
-        </th:block>
-
-        <a class="btn btn-primary" th:href="@{/}">Back</a>
     </div>
-
 </th:block>
