--- a/src/main/resources/templates/posts/details.html
+++ b/src/main/resources/templates/posts/details.html
@@ -2,7 +2,16 @@
     <div class="container">
         <div class="py-5 d-flex align-content-center justify-content-center">
             <div class="card" style="width: 50%">
-                <th:block th:include="~{_fragments/single-post}"/>
+                <img th:src="${post.pictureUrl}" class="card-img-top" alt="Image for ">
+                <div class="card-body">
+                    <h5 class="card-title">[[${#strings.capitalize(post.title)}]]</h5>
+                    <p class="card-text">[[${post.description}]]</p>
+                    <p class="card-text">Creator: [[${#strings.capitalize(post.creatorUsername)}]]
+                        <th:block th:if="${session.user.username!=post.creatorUsername}"><a
+                                th:href="@{/messages/new(name=${post.creatorUsername})}" class="btn btn-primary">Send message</a>
+                        </th:block>
+                    </p>
+
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                         <a th:href="@{/comments/all/{id}(id=${post.id})}" class="btn btn-sm btn-outline-success">Comments</a>
@@ -17,7 +26,7 @@
                         </div>
                     </div>
                 </th:block>
-
+                </div>
                 <a class="btn btn-primary" th:href="@{/}">Back</a>
             </div>
         </div>
