Added user roles, all users, admin roles and moderator roles

--- a/src/main/resources/templates/_layouts/index.html
+++ b/src/main/resources/templates/_layouts/index.html
@@ -3,12 +3,8 @@
 <th:block th:include="~{_shared/head}"/>
 <body>
 <th:block th:include="~{_shared/header}"/>
+<main>
 <th:block th:include="${view}"></th:block>
-<th:block th:if="${message!=null}">
-    <div class="alert alert-danger" role="alert">
-        [[${message}]]
-    </div>
-</th:block>
-
+</main>
 </body>
 </html>
