--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,17 +3,10 @@
         <th:block th:include="~{_fragments/home-guest}"/>
     </th:block>
     <th:block th:if="${session.user!=null}">
-        <th:block th:include="~{_fragments/home-logged-head}"/>
-        <th:block th:if="${posts.empty}">
-            <th:block th:include="~{_fragments/home-posts-empty}"/>
-        </th:block>
-        <th:block th:unless="${posts.empty}">
-            <div class="row">
-                <div class="col">
-                    <h4 class="jumbotron-heading">All posts</h4>
-                </div>
-            </div>
-            <th:block th:include="~{_fragments/home-posts-all}"/>
-        </th:block>
+
+        <div class="py-5 d-flex align-content-center justify-content-center" id="all-posts">
+            <div id="loader" class="spinner-border" role="status">
+        </div>
+        <script src="/js/posts.js"></script>
     </th:block>
 </th:block>
