--- a/src/main/resources/templates/posts/details.html
+++ b/src/main/resources/templates/posts/details.html
@@ -17,7 +17,7 @@
                         <a th:href="@{/comments/all/{id}(id=${post.id})}" class="btn btn-sm btn-outline-success">Comments</a>
                     </div>
                 </div>
-                <th:block th:if="${session.user.username == post.creatorUsername}">
+                <th:block th:if="${session.user.username == post.creatorUsername or session.user.userRole =='ADMIN'}">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <a th:href="@{/posts/edit(id=${post.id})}" class="btn btn-sm btn-outline-warning">Edit</a>
