Added Admin functions to edit,delete posts and delete comments

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,4 +1,8 @@
 <th:block th:fragment>
-    <h2>Java MVC Frameworks exam project</h2>
-    <h3><i class="fas fa-smile-wink"></i></h3>
+    <div class="container">
+        <div class="py-5 text-center">
+            <h2 class="h2">Java MVC Frameworks exam project</h2>
+            <h3 class="h3"><i class="fas fa-smile-wink"></i></h3>
+        </div>
+    </div>
 </th:block>
