Escaped some characters. Extended contacts functionality.

--- a/src/main/resources/templates/_fragments/nav-user.html
+++ b/src/main/resources/templates/_fragments/nav-user.html
@@ -8,4 +8,7 @@
 <li class="nav-item">
     <a th:href="@{/users/logout}" class="nav-link" >Logout</a>
 </li>
+    <li class="nav-item">
+        <a th:href="@{/contacts/{id}(id=${session.user.id})}" class="nav-link" >Contacts</a>
+    </li>
 </th:block>
