--- a/src/main/resources/templates/contacts/user-data.html
+++ b/src/main/resources/templates/contacts/user-data.html
@@ -13,7 +13,7 @@
                 <th scope="row"><i style="margin-right: 0.5rem;" class="far fa-user"></i></th>
                 <td>[[${user.username}]]</td>
                 <td>[[${user.creationDate}]]</td>
-                <td>[[${comments.length}]]</td>
+                <td>[[${contacts.length}]]</td>
             </tr>
         </tbody>
     </table>
