--- a/src/main/resources/templates/comments/all.html
+++ b/src/main/resources/templates/comments/all.html
@@ -5,7 +5,7 @@
         <table class="table">
             <thead>
             <tr>
-                <th scope="col">#</th>
+                <th scope="col">&#35;</th>
                 <th scope="col">Comment</th>
                 <th scope="col">User</th>
                 <th scope="col">Date</th>
