--- a/src/main/resources/templates/contacts/all.html
+++ b/src/main/resources/templates/contacts/all.html
@@ -1,9 +1,8 @@
 <th:block th:fragment>
     <div class="container">
         <div class="py-5 text-center">
-            <th:block th:include="~{contacts/user-data}"/>
+         <!--   <th:block th:include="~{contacts/user-data}"/> -->
             <br/>
-
             <th:block th:include="~{contacts/create}"/>
         </div>
     </div>
