--- a/src/main/resources/templates/messages/all.html
+++ b/src/main/resources/templates/messages/all.html
@@ -5,7 +5,7 @@
         <table class="table">
             <thead>
             <tr>
-                <th scope="col">#</th>
+                <th scope="col">&#35;</th>
                 <th scope="col">Message</th>
                 <th scope="col">User</th>
             </tr>
